--- a/views/admin/partials/adminNavbar.hbs
+++ b/views/admin/partials/adminNavbar.hbs
@@ -10,7 +10,7 @@
           <input type="search" placeholder="Busca informacion" id="Buscador" />
         </div>
         <div class="header-right">
-         <span class="material-symbols-outlined">power_settings_new</span><a href="index" class="modulos" >Salir</a> 
+         <span class="material-symbols-outlined">power_settings_new</span><a href="/" class="modulos" >Salir</a> 
         </div>
       </header>
       <!-- End Header -->
