--- a/views/admin/partials/adminNavbar.hbs
+++ b/views/admin/partials/adminNavbar.hbs
@@ -4,13 +4,13 @@
       <!-- Header -->
       <header class="header">
         <div class="menu-icon" onclick="openSidebar()">
-          <span class="material-icons-outlined">menu</span>
+          <span class="material-symbols-outlined">menu</span>
         </div>
         <div class="header-left">
           <input type="search" placeholder="Busca informacion" id="Buscador" />
         </div>
         <div class="header-right">
-         <span class="material-symbols-outlined">power_settings_new</span><a href="/" class="modulos" >Salir</a> 
+         <a href="/" class="modulos"><span class="material-symbols-outlined">power_settings_new</span></a> 
         </div>
       </header>
       <!-- End Header -->
@@ -21,7 +21,7 @@
           <div class="sidebar-brand">
             <span class="material-symbols-outlined">local_library</span> LIBRARYSOFT
           </div>
-          <span class="material-icons-outlined" onclick="closeSidebar()">close</span>
+          <span  class="material-symbols-outlined" onclick="closeSidebar()">close</span>
         </div>
 
         <ul class="sidebar-list">
