--- a/views/student/partials/studentNavbar.hbs
+++ b/views/student/partials/studentNavbar.hbs
@@ -9,7 +9,7 @@
           <input type="search" placeholder="Busca informacion" id="Buscador" />
         </div>
         <div class="header-right">
-         <span class="material-symbols-outlined">power_settings_new</span><a href="index" class="modulos" >Salir</a> 
+         <span class="material-symbols-outlined">power_settings_new</span><a href="/" class="modulos" >Salir</a> 
         </div>
       </header>
       <!-- End Header -->
@@ -20,15 +20,15 @@
           <div class="sidebar-brand">
             <span class="material-symbols-outlined">local_library</span> LIBRARYSOFT
           </div>
-          <span class="material-icons-outlined" onclick="closeSidebar()">close</span>
+          <span class="material-symbols-outlined">close</span>
         </div>
 
         <ul class="sidebar-list">
           <li class="sidebar-list-item">
-            <span class="material-symbols-outlined">person</span> <a href="studentInicio" class="modulos">Inicio</a> 
+            <span class="material-symbols-outlined">person</span> <a href="studentinicio" class="modulos">Inicio</a> 
           </li>  
           <li class="sidebar-list-item">
-            <span class="material-symbols-outlined">bookmark_added</span> <a href="studentPrestamos" class="modulos">Préstamos</a> 
+            <span class="material-symbols-outlined">bookmark_added</span> <a href="studentprestamos" class="modulos">Préstamos</a> 
           </li>
       </aside>
       <!-- End Sidebar -->
