--- a/views/teacher/partials/teacherNavbar.hbs
+++ b/views/teacher/partials/teacherNavbar.hbs
@@ -9,9 +9,9 @@
           <input type="search" placeholder="Busca informacion" id="Buscador" />
         </div>
         <div class="header-right">
-         <span class="material-symbols-outlined">power_settings_new</span><a href="index" class="modulos" >Salir</a> 
+         <span class="material-symbols-outlined">power_settings_new</span><a href="/" class="modulos" >Salir</a> 
         </div>
-      </header>
+      </header>   
       <!-- End Header -->
 
       <!-- Sidebar -->
