--- a/views/admin/partials/adminNavbar.hbs
+++ b/views/admin/partials/adminNavbar.hbs
@@ -26,25 +26,25 @@
 
         <ul class="sidebar-list">
           <li class="sidebar-list-item">
-            <span class="material-symbols-outlined">dashboard</span> <a href="dashboard" class="modulos" >Dashboard</a>
+            <span class="material-symbols-outlined">dashboard</span> <a href="/dashboard" class="modulos" >Dashboard</a>
           </li>
           <li class="sidebar-list-item">
-            <span class="material-symbols-outlined">settings</span> <a href="roles" class="modulos">Roles</a> 
+            <span class="material-symbols-outlined">settings</span> <a href="/roles" class="modulos">Roles</a> 
           </li>
           <li class="sidebar-list-item">
-              <span class="material-symbols-outlined">person</span> <a href="usuarios" class="modulos">Usuarios</a>
+              <span class="material-symbols-outlined">person</span> <a href="/usuarios" class="modulos">Usuarios</a>
           </li>
           <li class="sidebar-list-item">
-             <span class="material-symbols-outlined">book</span> <a href="libros" class="modulos">Libros</a>
+             <span class="material-symbols-outlined">book</span> <a href="/libros" class="modulos">Libros</a>
           </li>
           <li class="sidebar-list-item">
-            <span class="material-symbols-outlined">bookmark_added</span> <a href="prestamos" class="modulos">Préstamos</a> 
+            <span class="material-symbols-outlined">bookmark_added</span> <a href="/prestamos" class="modulos">Préstamos</a> 
           </li>
           <li class="sidebar-list-item">
-            <span class="material-symbols-outlined">calendar_month</span> <a href="reservas" class="modulos">Reservas</a> 
+            <span class="material-symbols-outlined">calendar_month</span> <a href="/reservas" class="modulos">Reservas</a> 
           </li>
               <li class="sidebar-list-item">
-            <span class="material-symbols-outlined"></a>cancel_presentation</span> <a href="sanciones" class="modulos">Sanciones</a>
+            <span class="material-symbols-outlined"></a>cancel_presentation</span> <a href="/sanciones" class="modulos">Sanciones</a>
           </li>
         </ul>
       </aside>
