--- a/views/student/partials/studentNavbar.hbs
+++ b/views/student/partials/studentNavbar.hbs
@@ -25,10 +25,10 @@
 
         <ul class="sidebar-list">
           <li class="sidebar-list-item">
-            <span class="material-symbols-outlined">person</span> <a href="studentinicio" class="modulos">Inicio</a> 
+            <span class="material-symbols-outlined">person</span> <a href="/studentInicio" class="modulos">Inicio</a> 
           </li>  
           <li class="sidebar-list-item">
-            <span class="material-symbols-outlined">bookmark_added</span> <a href="studentprestamos" class="modulos">Préstamos</a> 
+            <span class="material-symbols-outlined">bookmark_added</span> <a href="/studentPrestamos" class="modulos">Préstamos</a> 
           </li>
       </aside>
       <!-- End Sidebar -->
