--- a/views/teacher/partials/teacherNavbar.hbs
+++ b/views/teacher/partials/teacherNavbar.hbs
@@ -25,13 +25,13 @@
 
         <ul class="sidebar-list">
           <li class="sidebar-list-item">
-            <span class="material-symbols-outlined">person</span> <a href="teacherInicio" class="modulos">Inicio</a> 
+            <span class="material-symbols-outlined">person</span> <a href="/teacherInicio" class="modulos">Inicio</a> 
           </li>  
           <li class="sidebar-list-item">
-            <span class="material-symbols-outlined">bookmark_added</span> <a href="teacherPrestamos" class="modulos">Préstamos</a> 
+            <span class="material-symbols-outlined">bookmark_added</span> <a href="/teacherPrestamos" class="modulos">Préstamos</a> 
           </li>
           <li class="sidebar-list-item">
-            <span class="material-symbols-outlined">calendar_month</span> <a href="teacherReservas" class="modulos">Reservas</a> 
+            <span class="material-symbols-outlined">calendar_month</span> <a href="/teacherReservas" class="modulos">Reservas</a> 
         </ul>
       </aside>
       <!-- End Sidebar -->
